Fixed navbar on tablet devices

--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -75,7 +75,7 @@ a:focus {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: $fontsans;
     background-color: #000;
 }
 
